@@ -166,7 +166,7 @@
     </control>
 
     <control>
-      <description>start logo</description>
+      <description>Cover image</description>
       <type>image</type>
       <id>3</id>
       <posx>220</posx>
@@ -174,6 +174,7 @@
       <width>145</width>
       <height>188</height>
       <texture>-</texture>
+      <aspectratio>keep</aspectratio>
     </control>
 
     <control>
