@@ -187,7 +187,6 @@ void CGUIWindowMusicInfo::Refresh()
   if (pControl)
   {
     CGUIImage* pImageControl = (CGUIImage*)pControl;
-    pImageControl->SetAspectRatio(CGUIImage::ASPECT_RATIO_KEEP);
     pImageControl->SetFileName(strThumb);
   }
   Update();
